k8s/mongodb_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodegoat-data
  labels:
    app: mongodb
    environment: staging
