k8s/mongodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nodegoat-data
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
